--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
 }
 .boardSection1.sec-1 {
     width: 300px;
@@ -348,6 +352,10 @@ body {
     z-index: 1;
     background: #fff;
     transition: all ease-in-out 200ms;
+    -webkit-transition: all ease-in-out 200ms;
+    -ms-transition: all ease-in-out 200ms;
+    -moz-transition: all ease-in-out 200ms;
+    -o-transition: all ease-in-out 200ms;
 }
 .greenBox .diceBox {
     position: absolute;
@@ -356,6 +364,10 @@ body {
     padding: 4px 0 0 4px;
     box-shadow: 0px 0px 7px 4px rgba(0,0,0,0.2) inset, 0px 0px 7px 4px rgba(0,0,0,0.5);
     border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
     border: 3px solid #fff;
     background: #019C48
 }
@@ -366,6 +378,10 @@ body {
     padding: 8px 0 0 10px;
     box-shadow: 0px 0px 7px 4px rgba(0,0,0,0.2) inset, 0px 0px 7px 4px rgba(0,0,0,0.5);
     border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
     border: 3px solid #fff;
     background: #1F88DB;
 }
@@ -376,6 +392,10 @@ body {
     padding: 10px 0 0 8px;
     box-shadow: 0px 0px 7px 4px rgba(0,0,0,0.2) inset, 0px 0px 7px 4px rgba(0,0,0,0.5);
     border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
     border: 3px solid #fff;
     background: #EC1C23;
 }
@@ -386,6 +406,10 @@ body {
     padding: 10px 0 0 10px;
     box-shadow: 0px 0px 7px 4px rgba(0,0,0,0.2) inset, 0px 0px 7px 4px rgba(0,0,0,0.5);
     border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
     border: 3px solid #fff;
     background: #FFDE17
 }
@@ -433,6 +457,10 @@ body {
 }
 .diceBox.enable .diceIcon {
     animation: fadein 0.4s ease-in alternate infinite;
+    -webkit-animation: fadein 0.4s ease-in alternate infinite;
+    -ms-animation: fadein 0.4s ease-in alternate infinite;
+    -moz-animation: fadein 0.4s ease-in alternate infinite;
+    -o-animation: fadein 0.4s ease-in alternate infinite;
 }
 .onetimePlease {
     pointer-events: none !important;
@@ -561,6 +589,10 @@ body {
     background-size: 20px;
     background-color: white;
     transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
 }
 .red-arw {
     background: url('../images/redarw.png') no-repeat center;
@@ -571,13 +603,21 @@ body {
     background: url('../images/greenarw.png') no-repeat center;
     background-size: 20px;
     background-color: white;
-    transform: rotate(90deg);
+    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
 }
 .blue-arw {
     background: url('../images/bluearw.png') no-repeat center;
     background-size: 20px;
     background-color: white;
     transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
 }
 /****************** Arrow Icons ************************/
                     /* END */
@@ -648,6 +688,10 @@ body {
 
 .ludoBtn-red.activeredbtn.newcls{
     animation: none !important;
+    -webkit-animation: none !important;
+    -ms-animation: none !important;
+    -moz-animation: none !important;
+    -o-animation: none !important;
     border: 1px solid #000 !important;
     pointer-events: none !important;
 }
@@ -656,6 +700,10 @@ body {
 .finalblueBox > div,
 .finalgreenBox > div {
     animation: none !important;
+    -webkit-animation: none !important;
+    -ms-animation: none !important;
+    -moz-animation: none !important;
+    -o-animation: none !important;
     border: none !important;
 }
 
@@ -715,6 +763,10 @@ body {
     text-align: center;
     line-height: 34px;
     text-shadow: 1px 1px 5px #fff;
+    -webkit-text-shadow: 1px 1px 5px #fff;
+    -ms-text-shadow: 1px 1px 5px #fff;
+    -moz-text-shadow: 1px 1px 5px #fff;
+    -o-text-shadow: 1px 1px 5px #fff;
 }
 
 .finalredBox.ludoBoardBox.redStep,
@@ -743,6 +795,10 @@ body {
 .homeScreen .txt, .homeScreen .options {
     text-align: center;
     transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    -o-transform: translate(-50%,-50%);
     top: 50%;
     left: 50%;
     
@@ -753,6 +809,10 @@ body {
     color: #fff;
     font-family: 'Lobster Two', cursive;
     text-shadow: 5px 4px 5px rgba(0,0,0,0.6), -5px 4px 5px rgba(0,0,0,0.6);
+    -webkit-text-shadow: 5px 4px 5px rgba(0,0,0,0.6), -5px 4px 5px rgba(0,0,0,0.6);
+    -ms-text-shadow: 5px 4px 5px rgba(0,0,0,0.6), -5px 4px 5px rgba(0,0,0,0.6);
+    -moz-text-shadow: 5px 4px 5px rgba(0,0,0,0.6), -5px 4px 5px rgba(0,0,0,0.6);
+    -o-text-shadow: 5px 4px 5px rgba(0,0,0,0.6), -5px 4px 5px rgba(0,0,0,0.6);
     position: relative;
     /* letter-spacing: 40px; */
     font-style: italic;
@@ -769,6 +829,10 @@ body {
     color: #000;
     /* letter-spacing: 5px; */
     text-shadow: 0px 0px 5px #fff, 0px 0px 5px #fff, 0px 0px 5px #fff, 0px 0px 5px #fff;
+    -webkit-text-shadow: 0px 0px 5px #fff, 0px 0px 5px #fff, 0px 0px 5px #fff, 0px 0px 5px #fff;
+    -ms-text-shadow: 0px 0px 5px #fff, 0px 0px 5px #fff, 0px 0px 5px #fff, 0px 0px 5px #fff;
+    -moz-text-shadow: 0px 0px 5px #fff, 0px 0px 5px #fff, 0px 0px 5px #fff, 0px 0px 5px #fff;
+    -o-text-shadow: 0px 0px 5px #fff, 0px 0px 5px #fff, 0px 0px 5px #fff, 0px 0px 5px #fff;
 
 }
 .homeScreen h3 {
@@ -779,6 +843,10 @@ body {
     display: inline-block;
     cursor: pointer;
     text-shadow: 0px 0px 5px rgba(0,0,0,0.6), -5px 0px 5px rgba(0,0,0,0.6);
+    -webkit-text-shadow: 0px 0px 5px rgba(0,0,0,0.6), -5px 0px 5px rgba(0,0,0,0.6);
+    -ms-text-shadow: 0px 0px 5px rgba(0,0,0,0.6), -5px 0px 5px rgba(0,0,0,0.6);
+    -moz-text-shadow: 0px 0px 5px rgba(0,0,0,0.6), -5px 0px 5px rgba(0,0,0,0.6);
+    -o-text-shadow: 0px 0px 5px rgba(0,0,0,0.6), -5px 0px 5px rgba(0,0,0,0.6);
     text-transform: capitalize;
 
 }
@@ -842,9 +910,17 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
     border: 2px solid rgba(0,0,0,0.8);
     width: 500px;
     border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
     padding: 40px 20px;
     background: rgba(255,255,255,0.9);
     box-shadow: 0px 0px 5px rgba(0,0,0,0.8);
@@ -853,6 +929,10 @@ body {
     font-size: 50px;
     text-align: center;
     text-shadow: 0px 0px 5px rgba(255,255,255,0.6), -5px 0px 5px rgba(255,255,255,0.6);
+    -webkit-text-shadow: 0px 0px 5px rgba(255,255,255,0.6), -5px 0px 5px rgba(255,255,255,0.6);
+    -ms-text-shadow: 0px 0px 5px rgba(255,255,255,0.6), -5px 0px 5px rgba(255,255,255,0.6);
+    -moz-text-shadow: 0px 0px 5px rgba(255,255,255,0.6), -5px 0px 5px rgba(255,255,255,0.6);
+    -o-text-shadow: 0px 0px 5px rgba(255,255,255,0.6), -5px 0px 5px rgba(255,255,255,0.6);
     color: #012265;
     line-height: 1;
     /* text-transform: uppercase; */
@@ -877,6 +957,10 @@ body {
     width: 30px;
     border: 3px solid #ccc;
     border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -o-border-radius: 50%;
     border: 4px solid #012265;
     box-shadow: 0px 0px 20px rgba(1,34,101,0.8);
 }
@@ -899,8 +983,16 @@ body {
     text-align: center;
     color: #012265;
     text-shadow: 0px 0px 3px #fff, 0px 0px 3px #fff, 0px 0px 3px #fff;
+    -webkit-text-shadow: 0px 0px 3px #fff, 0px 0px 3px #fff, 0px 0px 3px #fff;
+    -ms-text-shadow: 0px 0px 3px #fff, 0px 0px 3px #fff, 0px 0px 3px #fff;
+    -moz-text-shadow: 0px 0px 3px #fff, 0px 0px 3px #fff, 0px 0px 3px #fff;
+    -o-text-shadow: 0px 0px 3px #fff, 0px 0px 3px #fff, 0px 0px 3px #fff;
     letter-spacing: 5px;
     box-shadow: 0px 0px 0px 2px #012265;
+    -webkit-box-shadow: 0px 0px 0px 2px #012265;
+    -ms-box-shadow: 0px 0px 0px 2px #012265;
+    -moz-box-shadow: 0px 0px 0px 2px #012265;
+    -o-box-shadow: 0px 0px 0px 2px #012265;
     text-rendering: geometricPrecision;
     text-transform: capitalize;
     display: inline-block;
@@ -993,12 +1085,24 @@ body {
     color: #012265;
     margin: 14px 0;
     text-shadow: 0px 0px 5px rgba(255,255,255,0.6), -5px 0px 5px rgba(0,0,0,0.6);
+    -webkit-text-shadow: 0px 0px 5px rgba(255,255,255,0.6), -5px 0px 5px rgba(0,0,0,0.6);
+    -ms-text-shadow: 0px 0px 5px rgba(255,255,255,0.6), -5px 0px 5px rgba(0,0,0,0.6);
+    -moz-text-shadow: 0px 0px 5px rgba(255,255,255,0.6), -5px 0px 5px rgba(0,0,0,0.6);
+    -o-text-shadow: 0px 0px 5px rgba(255,255,255,0.6), -5px 0px 5px rgba(0,0,0,0.6);
 }
 .cong-msg {
     margin-bottom: 275px;
 }
-
-
+.ludoBtn-green-completed {
+    top: 0;
+    right: 0;
+    margin: 12px;
+}
+.ludoBtn-blue-completed {
+    bottom: 0;
+    right: 0;
+    margin: 12px;
+}
 
 
 
