--- a/css/style.css
+++ b/css/style.css
@@ -1029,6 +1029,10 @@ body {
     line-height: 1;
     display: inline-block;
     border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
     opacity: 0.5;
     cursor: pointer;
 }
