--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ html, body {
 
 
 body {
-    background-image: url('../images/Slice 1.jpg');
+    background-image: url('../images/bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
@@ -762,7 +762,7 @@ body {
     width: 100%;
     height: 100vh;
     position: fixed;
-    background: url("../images/parcheesi-1152049.jpg");
+    background: url("../images/home-screen-bg.jpg");
     top: 0;
     left: 0;
     bottom: 0;
@@ -910,7 +910,7 @@ body {
     -moz-border-radius: 5px;
     -o-border-radius: 5px;
     padding: 40px 20px;
-    background: url('../images/parcheesi-1152030.jpg');
+    background: url('../images/menu-bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     box-shadow: 0px 0px 5px rgba(0,0,0,0.8);
@@ -1096,7 +1096,7 @@ body {
     
 }
 .win-info {
-    background: url('../images/King_Crown_and_Cape_PNG_Clipart.png');
+    background: url('../images/win-bg.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
