--- a/css/style.css
+++ b/css/style.css
@@ -43,42 +43,42 @@ body {
     width: 300px;
     float: left;
     height: 300px;
-    box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -webkit-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -ms-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -moz-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -o-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
+    box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -webkit-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -ms-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -moz-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -o-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
 }
 .boardSection1.sec-2 {
     width: 150px;
     float: left;
     height: 300px;
-    box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -webkit-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -ms-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -moz-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -o-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
+    box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -webkit-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -ms-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -moz-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -o-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
 }
 .boardSection1.sec-3 {
     width: 300px;
     float: left;
     height: 300px;
-    box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -webkit-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -ms-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -moz-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -o-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
+    box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -webkit-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -ms-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -moz-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -o-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
 }
 .ludoBoardBox {
     float: left;
     height: 50px;
     width: 50px;
     background: #fff;
-    box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -webkit-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -ms-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -moz-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -o-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
+    box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -webkit-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -ms-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -moz-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -o-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
     position: relative;
 }
 .boardSection1,
@@ -471,11 +471,11 @@ body {
     -ms-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
-    box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -webkit-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -ms-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -moz-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -o-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
+    box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -webkit-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -ms-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -moz-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -o-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
 }
 .finalyelloBox {
     height: 150px;
@@ -489,11 +489,11 @@ body {
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     left: 106px;
-    box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -webkit-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -ms-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -moz-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -o-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
+    box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -webkit-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -ms-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -moz-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -o-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
 }
 .finalblueBox {
     height: 150px;
@@ -507,11 +507,11 @@ body {
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     top: -106px;
-    box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -webkit-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -ms-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -moz-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -o-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
+    box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -webkit-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -ms-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -moz-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -o-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
 }
 .finalgreenBox {
     height: 150px;
@@ -525,11 +525,11 @@ body {
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     left: -106px;
-    box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -webkit-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -ms-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -moz-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
-    -o-box-shadow: 0 0 2px rgb(0, 0, 0) inset;
+    box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -webkit-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -ms-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -moz-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
+    -o-box-shadow: 0 0 1px rgb(0, 0, 0) inset;
 }
 /****************** Final Step ************************/
                     /* END */
@@ -741,7 +741,7 @@ body {
     color: #000;
     font-family: monospace;
     text-align: center;
-    line-height: 34px;
+    line-height: 40px;
     text-shadow: 1px 1px 5px #fff;
     -webkit-text-shadow: 1px 1px 5px #fff;
     -ms-text-shadow: 1px 1px 5px #fff;
@@ -935,13 +935,16 @@ body {
 }
 .playerChooseBox {
     padding-left: 40px;
+    position: relative;
 }
 .playerChooseBox input {
     display: none;
 }
 .playerChooseBox input + label {
-    position: relative;
+    position: absolute;
     cursor: pointer;
+    top: 0;
+    left: 40px;
 }
 .playerChooseBox input + label:before {
     content: '';
@@ -1168,9 +1171,73 @@ body {
     top: 10px;
     left: 190px;
 }
+.game-options {
+    position: fixed;
+    right: 0;
+    top: 50%;
+    margin-top: -85px;
+    background: rgba(255,255,255, 1);
+    border-top-left-radius: 5px;
+    -webkit-border-top-left-radius: 5px;
+    -ms-border-top-left-radius: 5px;
+    -moz-border-top-left-radius: 5px;
+    -o-border-top-left-radius: 5px;
 
+    border-bottom-left-radius: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    -ms-border-bottom-left-radius: 5px;
+    -moz-border-bottom-left-radius: 5px;
+    -o-border-bottom-left-radius: 5px;
 
-
+    box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.2);
+    -ms-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.2);
+    -o-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.2);
+}
+.game-options ul {
+    display: block;
+    list-style: none;
+}
+.game-options ul li {
+    display: block;
+    padding: 10px;
+}
+.game-options ul li a {
+    display: block;
+}
+.game-options img {
+    width: 30px;
+}
+.game-options ul li a:hover img {
+    opacity: 0.6;
+}
+.playagain label {
+    cursor: pointer;
+    background: #000;
+    color: #fff;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
+    text-align: center;
+    padding: 7px 10px 0;
+    line-height: 1px;
+    border: 2px solid #fff;
+    box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.5);
+    -ms-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.5);
+    -o-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.5);
+    position: relative;
+    z-index: 9;
+}
+.playagain label img {
+    width: 20px;
+    vertical-align: middle;
+    margin-right: 5px;
+}
 
 
 
